--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "jsdom-global": "^3.0.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.2.0",
     "react-test-renderer": "^17.0.2",
     "style-loader": "^3.2.1",
     "webpack": "^5.48.0",
