--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,20 @@
 {
-    "presets": [
-        "@babel/preset-react",
-        [
-            "@babel/preset-env",
-            {
-              "targets": {
-                "esmodules": true
-              }
-            }
-        ]
+  "presets": [
+      "@babel/preset-env", 
+      "@babel/preset-react"
+  ],
+  "plugins": [
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "libraryDirectory": "lib",
+          "style": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-class-properties"
+      ],
+      "react-hot-loader/babel"
     ]
 }
