--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "antd": "^4.16.10",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
